CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

13 April 2007
+ Added utf8_encode to all conversions to try and prevent foreign
  character corruption (Thanks Mabhobs)

12 April 2007
+ Convert Blog, Web Pages - Added parseInput to try and fix foreign
  characters
+ Made default template directory local.
+ Updated setup's config template with new local cache define.


11 April 2007
+ Removed Item include from Init.php, now up to module.
+ Added ENCODE_PARSED_TEXT define to text_settings.php
+ Added ability to prohibit encoding of text during parsing.

6 April 2007
+ Removed imageselect function from Form. Not used.
+ Removed translate functions throughout core.

5 April 2007
+ Added German translation files.
+ Further updates to Language.txt documentation
+ Small change in Init to ensure core's default status.

4 April 2007
+ Database - Fixed bug with addTable / changed all booleans to lower
             case
+ Module - Changed isInstalled slightly. If on initialization, there
           is a "not installed" error, we can assume the module is not
           installed and return false. Otherwise, we check in the
           normal way.
+ Init - Using new language translation method recommended by Ortwin
         Pinke

Documentation - updated Language.txt to reflect changes made in Init.php


3 April 2007
+ Bug #1690757 - Form.php : Added space to radio button to help with formatting
+ Bug #1689289 - Text.php : Changed makeRelative's inline mode to only
change src and href addresses.


2 April 2007
+ Changed error message to report server's maximum file size
+ DBPager
  o Added error check
  o The search query was put into it own where group to prevent conflicts.
+ Error - removed function reference from get function
+ Settings - changed upper limit on small int detection
+ Documention
  o Access - added a lot of new information
+ Javascript
  o Rewrote ajax javascript functionality